tests/parser/fail/assign-to-super.som
"test:
failMessage:
  - contains: assign
  - contains: super
"

AssignToSuper = (
  run = (
    super := 42.
  )
)
